Properly handle non-URL paths in `class.path`